Working on tests for edge cases.